--- a/app/views/notifier/_notifier_css.haml
+++ b/app/views/notifier/_notifier_css.haml
@@ -11,6 +11,7 @@
     padding-left:15px;
   }
   header{
+    color: #fff;
     background-color:#333;
     padding: 15px;
     margin-bottom: 25px;
